--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "devDependencies": {
     "@tauri-apps/cli": "^2.2.7",
     "vite": "^6.1.0"
+  },
+  "dependencies": {
+    "@tauri-apps/api": "^2.2.0"
   }
 }
