--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vite": "^6.1.0"
   },
   "dependencies": {
-    "@tauri-apps/api": "^2.2.0"
+    "@tauri-apps/api": "^2.2.0",
+    "@tauri-apps/plugin-dialog": "^2.2.0"
   }
 }
