--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "@tauri-apps/cli": "^2.2.7",
+    "@types/p5": "^1.7.6",
     "vite": "^6.1.0"
   },
   "dependencies": {
