--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -21,6 +21,6 @@ tauri-build = { version = "2.0.4", features = [] }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 log = "0.4"
-tauri = { version = "2.2.4", features = [] }
+tauri = { version = "2.2.4", features = ["protocol-asset"] }
 tauri-plugin-log = "2.0.0-rc"
 tauri-plugin-dialog = "2"
